<?xml version = "1.0" encoding = "utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeUpRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:layout_marginStart="-3dp"
                android:layout_marginEnd="-3dp"
                android:backgroundTint="@android:color/white">
            <!--<androidx.appcompat.widget.AppCompatTextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/app_name"-->
                    <!--android:textSize="20sp"-->
                    <!--android:textColor="@android:color/black"-->
                    <!--android:gravity="center"/>-->
            <fragment
                    android:id="@+id/text_autocomplete"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_below="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/weatherImage"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sunny"
                    android:layout_gravity="center"
            />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
            >
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/valueOfTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_value"
                        android:textSize="40sp"
                />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/unitOfTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_celsius"
                    android:textSize="30sp"
                    android:layout_marginStart="5dp"
            />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_city"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-10dp"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weatherPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_sunny"
                    android:textSize="20sp"
                    android:layout_gravity="center"
            />

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
            >
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weather_detail"
                            android:layout_margin="5dp"
                            android:gravity="center"
                    />
                    <LinearLayout
                            android:orientation="horizontal"
                            android:weightSum="4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false">
                        <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/speed_wind"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="1.05"
                                    android:textSize="20sp"
                                    android:gravity="center"
                            />
                            <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/wind_speed"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                            />
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/wind_speed"
                                    android:gravity="center"
                            />

                        </LinearLayout>
                        <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/count_of_clouds"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="5"
                                    android:textSize="20sp"
                                    android:gravity="center"
                            />
                            <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/clouds"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                            />
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/clouds"
                                    android:gravity="center"
                            />

                        </LinearLayout>
                        <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/pressure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="1000.5"
                                    android:textSize="20sp"
                                    android:gravity="center"
                            />
                            <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/pressure"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                            />
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/pressure"
                                    android:gravity="center"
                            />

                        </LinearLayout>
                        <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/humidity"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="33"
                                    android:textSize="20sp"
                                    android:gravity="center"
                            />
                            <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/humidity"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="5dp"
                            />
                            <androidx.appcompat.widget.AppCompatTextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/humidity"
                                    android:gravity="center"
                            />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
            >
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weather_next_5_days"
                            android:layout_margin="5dp"
                            android:gravity="center"
                    />
                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>